--- a/TankTroublESS/Properties/Resources.resx
+++ b/TankTroublESS/Properties/Resources.resx
@@ -118,9 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="TankExploding" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Audio\TankExploding.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="TankFiring" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Audio\TankFiring.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -130,7 +127,13 @@
   <data name="TG" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\TG.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TankExploding" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Audio\TankExploding.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="TR" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\TR.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ESS" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\ESS.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
